OLC2-P2-201906562/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instrucciones instruccion
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> declaracionvar PUNTOCOMA
Rule 4     instruccion -> declaracionconst PUNTOCOMA
Rule 5     instruccion -> arraydeclarationVar PUNTOCOMA
Rule 6     instruccion -> arraydeclarationConst PUNTOCOMA
Rule 7     instruccion -> asignacion PUNTOCOMA
Rule 8     instruccion -> AsigInter PUNTOCOMA
Rule 9     instruccion -> OptenInterface
Rule 10    instruccion -> OperTernario PUNTOCOMA
Rule 11    instruccion -> SentCtrflujo
Rule 12    instruccion -> SentTransf PUNTOCOMA
Rule 13    instruccion -> consolelog PUNTOCOMA
Rule 14    instruccion -> FuncDeb PUNTOCOMA
Rule 15    instruccion -> FuncEspe PUNTOCOMA
Rule 16    instruccion -> FunInterface PUNTOCOMA
Rule 17    instruccion -> FuncArray PUNTOCOMA
Rule 18    instruccion -> Funciones
Rule 19    instruccion -> LLamaFunciones PUNTOCOMA
Rule 20    FuncArray -> ID PT JOIN PARIZQ PARDER
Rule 21    FuncArray -> ID PT LENGTH
Rule 22    FuncArray -> ID PT INDEXOF PARIZQ expresion PARDER
Rule 23    FuncArray -> ID PT POP PARIZQ PARDER
Rule 24    FuncArray -> ID PT PUSH PARIZQ expresion PARDER
Rule 25    LLamaFunciones -> ID PARIZQ PARDER
Rule 26    LLamaFunciones -> ID PARIZQ ListExpresion PARDER
Rule 27    Funciones -> FUNCTION ID PARIZQ PARDER DOSPTS type LLAVEIZQ instrucciones LLAVEDER
Rule 28    Funciones -> FUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 29    Funciones -> FUNCTION ID PARIZQ LisParat PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 30    Funciones -> FUNCTION ID PARIZQ LisParat PARDER DOSPTS type LLAVEIZQ instrucciones LLAVEDER
Rule 31    LisParat -> LisParat COMA parametro
Rule 32    LisParat -> parametro
Rule 33    parametro -> ID DOSPTS type
Rule 34    OptenInterface -> ID PT ID
Rule 35    FunInterface -> INTERFACE ID LLAVEIZQ Listatributos LLAVEDER
Rule 36    Listatributos -> Listatributos PUNTOCOMA atributo
Rule 37    Listatributos -> atributo
Rule 38    atributo -> ID DOSPTS type
Rule 39    FuncEspe -> OBJECT PT KEYS PARIZQ expresion PARDER
Rule 40    FuncEspe -> OBJECT PT VALUES PARIZQ expresion PARDER
Rule 41    FuncDeb -> PARSEINT PARIZQ expresion PARDER
Rule 42    FuncDeb -> PARSEFLOAT PARIZQ expresion PARDER
Rule 43    FuncDeb -> FALSE PT TOSTRING PARIZQ PARDER
Rule 44    FuncDeb -> TRUE PT TOSTRING PARIZQ PARDER
Rule 45    FuncDeb -> ID PT TOSTRING PARIZQ PARDER
Rule 46    FuncDeb -> ID PT TOLOWERCASE PARIZQ PARDER
Rule 47    FuncDeb -> ID PT TOUPPERCASE PARIZQ PARDER
Rule 48    FuncDeb -> TYPEOF expresion
Rule 49    consolelog -> CONSOLE PT LOG PARIZQ ListExpresion PARDER
Rule 50    ListExpresion -> ListExpresion COMA expresion
Rule 51    ListExpresion -> expresion
Rule 52    SentCtrflujo -> Sentenciaif
Rule 53    SentCtrflujo -> SentenciaSwitch
Rule 54    SentCtrflujo -> SentenciaWhile
Rule 55    SentCtrflujo -> SentenciaFor
Rule 56    SentenciaFor -> FOR PARIZQ VAR ID DOSPTS type IG expresion PUNTOCOMA ID MENIG expresion PUNTOCOMA ID MAS MAS PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 57    SentenciaWhile -> WHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 58    SentenciaSwitch -> SWITCH PARIZQ expresion PARDER LLAVEIZQ listCase LLAVEDER
Rule 59    listCase -> listCase oplist
Rule 60    listCase -> oplist
Rule 61    oplist -> CASE expresion DOSPTS instrucciones
Rule 62    oplist -> DEFAULT DOSPTS instrucciones
Rule 63    Sentenciaif -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 64    Sentenciaif -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 65    Sentenciaif -> IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE Sentenciaif
Rule 66    SentTransf -> BREAK
Rule 67    SentTransf -> CONTINUE
Rule 68    SentTransf -> RETURN
Rule 69    SentTransf -> RETURN expresion
Rule 70    OperTernario -> expresion INTEROGACION expresion DOSPTS expresion
Rule 71    AsigInter -> ID PT ID IG expresion
Rule 72    AsigInter -> ID PT ID MAS IG expresion
Rule 73    AsigInter -> ID PT ID MENOS IG expresion
Rule 74    asignacion -> ID IG expresion
Rule 75    asignacion -> ID MAS IG expresion
Rule 76    asignacion -> ID MENOS IG expresion
Rule 77    asignacion -> accesId CORIZQ expresion CORDER IG expresion
Rule 78    declaracionvar -> VAR ID DOSPTS type IG expresion
Rule 79    declaracionvar -> VAR ID DOSPTS type
Rule 80    declaracionvar -> VAR ID IG expresion
Rule 81    declaracionvar -> VAR ID DOSPTS ID IG LLAVEIZQ ListAtrib LLAVEDER
Rule 82    ListAtrib -> ListAtrib COMA atrib
Rule 83    ListAtrib -> atrib
Rule 84    atrib -> ID DOSPTS expresion
Rule 85    declaracionconst -> CONST ID DOSPTS type IG expresion
Rule 86    declaracionconst -> CONST ID DOSPTS type
Rule 87    declaracionconst -> CONST ID IG expresion
Rule 88    type -> NUMBER
Rule 89    type -> FLOAT
Rule 90    type -> STRING
Rule 91    type -> BOOLEAN
Rule 92    type -> CHAR
Rule 93    type -> ID
Rule 94    expresion -> expresion AND expresion
Rule 95    expresion -> expresion OR expresion
Rule 96    expresion -> NOT expresion
Rule 97    expresion -> expresion MAY expresion
Rule 98    expresion -> expresion MEN expresion
Rule 99    expresion -> expresion MAYIG expresion
Rule 100   expresion -> expresion MENIG expresion
Rule 101   expresion -> expresion IGIG expresion
Rule 102   expresion -> expresion DIF expresion
Rule 103   expresion -> expresion MAS expresion
Rule 104   expresion -> expresion MENOS expresion
Rule 105   expresion -> expresion POR expresion
Rule 106   expresion -> expresion DIVIDIDO expresion
Rule 107   expresion -> expresion MOD expresion
Rule 108   expresion -> MENOS expresion
Rule 109   expresion -> PARIZQ expresion PARDER
Rule 110   expresion -> ENTERO
Rule 111   expresion -> CADENA
Rule 112   expresion -> DECIMAL
Rule 113   expresion -> TRUE
Rule 114   expresion -> FALSE
Rule 115   expresion -> CARACTER
Rule 116   expresion -> FuncDeb
Rule 117   expresion -> FuncEspe
Rule 118   expresion -> OperTernario
Rule 119   expresion -> OptenInterface
Rule 120   expresion -> LLamaFunciones
Rule 121   expresion -> FuncArray
Rule 122   expresion -> listArray
Rule 123   expresion -> ID
Rule 124   expresion -> CORIZQ ListExpresion CORDER
Rule 125   listArray -> accesId CORIZQ expresion CORDER
Rule 126   accesId -> ID
Rule 127   arraydeclarationVar -> VAR ID DOSPTS type CORIZQ CORDER IG expresion
Rule 128   arraydeclarationConst -> CONST ID DOSPTS type CORIZQ CORDER IG expresion

Terminals, with rules where they appear

AND                  : 94
BOOLEAN              : 91
BREAK                : 66
CADENA               : 111
CARACTER             : 115
CASE                 : 61
CHAR                 : 92
COMA                 : 31 50 82
CONSOLE              : 49
CONST                : 85 86 87 128
CONTINUE             : 67
CORDER               : 77 124 125 127 128
CORIZQ               : 77 124 125 127 128
DECIMAL              : 112
DEFAULT              : 62
DIF                  : 102
DIVIDIDO             : 106
DOSPTS               : 27 30 33 38 56 61 62 70 78 79 81 84 85 86 127 128
ELSE                 : 64 65
ENTERO               : 110
FALSE                : 43 114
FLOAT                : 89
FOR                  : 56
FUNCTION             : 27 28 29 30
ID                   : 20 21 22 23 24 25 26 27 28 29 30 33 34 34 35 38 45 46 47 56 56 56 71 71 72 72 73 73 74 75 76 78 79 80 81 81 84 85 86 87 93 123 126 127 128
IF                   : 63 64 65
IG                   : 56 71 72 73 74 75 76 77 78 80 81 85 87 127 128
IGIG                 : 101
INDEXOF              : 22
INTERFACE            : 35
INTEROGACION         : 70
JOIN                 : 20
KEYS                 : 39
LENGTH               : 21
LLAVEDER             : 27 28 29 30 35 56 57 58 63 64 64 65 81
LLAVEIZQ             : 27 28 29 30 35 56 57 58 63 64 64 65 81
LOG                  : 49
MAS                  : 56 56 72 75 103
MAY                  : 97
MAYIG                : 99
MEN                  : 98
MENIG                : 56 100
MENOS                : 73 76 104 108
MOD                  : 107
NOT                  : 96
NUMBER               : 88
OBJECT               : 39 40
OR                   : 95
PARDER               : 20 22 23 24 25 26 27 28 29 30 39 40 41 42 43 44 45 46 47 49 56 57 58 63 64 65 109
PARIZQ               : 20 22 23 24 25 26 27 28 29 30 39 40 41 42 43 44 45 46 47 49 56 57 58 63 64 65 109
PARSEFLOAT           : 42
PARSEINT             : 41
POP                  : 23
POR                  : 105
PT                   : 20 21 22 23 24 34 39 40 43 44 45 46 47 49 71 72 73
PUNTOCOMA            : 3 4 5 6 7 8 10 12 13 14 15 16 17 19 36 56 56
PUSH                 : 24
RETURN               : 68 69
STRING               : 90
SWITCH               : 58
TOLOWERCASE          : 46
TOSTRING             : 43 44 45
TOUPPERCASE          : 47
TRUE                 : 44 113
TYPEOF               : 48
VALUES               : 40
VAR                  : 56 78 79 80 81 127
WHILE                : 57
error                : 

Nonterminals, with rules where they appear

AsigInter            : 8
FunInterface         : 16
FuncArray            : 17 121
FuncDeb              : 14 116
FuncEspe             : 15 117
Funciones            : 18
LLamaFunciones       : 19 120
LisParat             : 29 30 31
ListAtrib            : 81 82
ListExpresion        : 26 49 50 124
Listatributos        : 35 36
OperTernario         : 10 118
OptenInterface       : 9 119
SentCtrflujo         : 11
SentTransf           : 12
SentenciaFor         : 55
SentenciaSwitch      : 53
SentenciaWhile       : 54
Sentenciaif          : 52 65
accesId              : 77 125
arraydeclarationConst : 6
arraydeclarationVar  : 5
asignacion           : 7
atrib                : 82 83
atributo             : 36 37
consolelog           : 13
declaracionconst     : 4
declaracionvar       : 3
expresion            : 22 24 39 40 41 42 48 50 51 56 56 57 58 61 63 64 65 69 70 70 70 71 72 73 74 75 76 77 77 78 80 84 85 87 94 94 95 95 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 109 125 127 128
instruccion          : 1 2
instrucciones        : 1 27 28 29 30 56 57 61 62 63 64 64 65 0
listArray            : 122
listCase             : 58 59
oplist               : 59 60
parametro            : 31 32
type                 : 27 30 33 38 56 78 79 85 86 127 128

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instrucciones instruccion
    (2) instrucciones -> . instruccion
    (3) instruccion -> . declaracionvar PUNTOCOMA
    (4) instruccion -> . declaracionconst PUNTOCOMA
    (5) instruccion -> . arraydeclarationVar PUNTOCOMA
    (6) instruccion -> . arraydeclarationConst PUNTOCOMA
    (7) instruccion -> . asignacion PUNTOCOMA
    (8) instruccion -> . AsigInter PUNTOCOMA
    (9) instruccion -> . OptenInterface
    (10) instruccion -> . OperTernario PUNTOCOMA
    (11) instruccion -> . SentCtrflujo
    (12) instruccion -> . SentTransf PUNTOCOMA
    (13) instruccion -> . consolelog PUNTOCOMA
    (14) instruccion -> . FuncDeb PUNTOCOMA
    (15) instruccion -> . FuncEspe PUNTOCOMA
    (16) instruccion -> . FunInterface PUNTOCOMA
    (17) instruccion -> . FuncArray PUNTOCOMA
    (18) instruccion -> . Funciones
    (19) instruccion -> . LLamaFunciones PUNTOCOMA
    (78) declaracionvar -> . VAR ID DOSPTS type IG expresion
    (79) declaracionvar -> . VAR ID DOSPTS type
    (80) declaracionvar -> . VAR ID IG expresion
    (81) declaracionvar -> . VAR ID DOSPTS ID IG LLAVEIZQ ListAtrib LLAVEDER
    (85) declaracionconst -> . CONST ID DOSPTS type IG expresion
    (86) declaracionconst -> . CONST ID DOSPTS type
    (87) declaracionconst -> . CONST ID IG expresion
    (127) arraydeclarationVar -> . VAR ID DOSPTS type CORIZQ CORDER IG expresion
    (128) arraydeclarationConst -> . CONST ID DOSPTS type CORIZQ CORDER IG expresion
    (74) asignacion -> . ID IG expresion
    (75) asignacion -> . ID MAS IG expresion
    (76) asignacion -> . ID MENOS IG expresion
    (77) asignacion -> . accesId CORIZQ expresion CORDER IG expresion
    (71) AsigInter -> . ID PT ID IG expresion
    (72) AsigInter -> . ID PT ID MAS IG expresion
    (73) AsigInter -> . ID PT ID MENOS IG expresion
    (34) OptenInterface -> . ID PT ID
    (70) OperTernario -> . expresion INTEROGACION expresion DOSPTS expresion
    (52) SentCtrflujo -> . Sentenciaif
    (53) SentCtrflujo -> . SentenciaSwitch
    (54) SentCtrflujo -> . SentenciaWhile
    (55) SentCtrflujo -> . SentenciaFor
    (66) SentTransf -> . BREAK
    (67) SentTransf -> . CONTINUE
    (68) SentTransf -> . RETURN
    (69) SentTransf -> . RETURN expresion
    (49) consolelog -> . CONSOLE PT LOG PARIZQ ListExpresion PARDER
    (41) FuncDeb -> . PARSEINT PARIZQ expresion PARDER
    (42) FuncDeb -> . PARSEFLOAT PARIZQ expresion PARDER
    (43) FuncDeb -> . FALSE PT TOSTRING PARIZQ PARDER
    (44) FuncDeb -> . TRUE PT TOSTRING PARIZQ PARDER
    (45) FuncDeb -> . ID PT TOSTRING PARIZQ PARDER
    (46) FuncDeb -> . ID PT TOLOWERCASE PARIZQ PARDER
    (47) FuncDeb -> . ID PT TOUPPERCASE PARIZQ PARDER
    (48) FuncDeb -> . TYPEOF expresion
    (39) FuncEspe -> . OBJECT PT KEYS PARIZQ expresion PARDER
    (40) FuncEspe -> . OBJECT PT VALUES PARIZQ expresion PARDER
    (35) FunInterface -> . INTERFACE ID LLAVEIZQ Listatributos LLAVEDER
    (20) FuncArray -> . ID PT JOIN PARIZQ PARDER
    (21) FuncArray -> . ID PT LENGTH
    (22) FuncArray -> . ID PT INDEXOF PARIZQ expresion PARDER
    (23) FuncArray -> . ID PT POP PARIZQ PARDER
    (24) FuncArray -> . ID PT PUSH PARIZQ expresion PARDER
    (27) Funciones -> . FUNCTION ID PARIZQ PARDER DOSPTS type LLAVEIZQ instrucciones LLAVEDER
    (28) Funciones -> . FUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (29) Funciones -> . FUNCTION ID PARIZQ LisParat PARDER LLAVEIZQ instrucciones LLAVEDER
    (30) Funciones -> . FUNCTION ID PARIZQ LisParat PARDER DOSPTS type LLAVEIZQ instrucciones LLAVEDER
    (25) LLamaFunciones -> . ID PARIZQ PARDER
    (26) LLamaFunciones -> . ID PARIZQ ListExpresion PARDER
    (126) accesId -> . ID
    (94) expresion -> . expresion AND expresion
    (95) expresion -> . expresion OR expresion
    (96) expresion -> . NOT expresion
    (97) expresion -> . expresion MAY expresion
    (98) expresion -> . expresion MEN expresion
    (99) expresion -> . expresion MAYIG expresion
    (100) expresion -> . expresion MENIG expresion
    (101) expresion -> . expresion IGIG expresion
    (102) expresion -> . expresion DIF expresion
    (103) expresion -> . expresion MAS expresion
    (104) expresion -> . expresion MENOS expresion
    (105) expresion -> . expresion POR expresion
    (106) expresion -> . expresion DIVIDIDO expresion
    (107) expresion -> . expresion MOD expresion
    (108) expresion -> . MENOS expresion
    (109) expresion -> . PARIZQ expresion PARDER
    (110) expresion -> . ENTERO
    (111) expresion -> . CADENA
    (112) expresion -> . DECIMAL
    (113) expresion -> . TRUE
    (114) expresion -> . FALSE
    (115) expresion -> . CARACTER
    (116) expresion -> . FuncDeb
    (117) expresion -> . FuncEspe
    (118) expresion -> . OperTernario
    (119) expresion -> . OptenInterface
    (120) expresion -> . LLamaFunciones
    (121) expresion -> . FuncArray
    (122) expresion -> . listArray
    (123) expresion -> . ID
    (124) expresion -> . CORIZQ ListExpresion CORDER
    (63) Sentenciaif -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (64) Sentenciaif -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
    (65) Sentenciaif -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE Sentenciaif
    (58) SentenciaSwitch -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ listCase LLAVEDER
    (57) SentenciaWhile -> . WHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (56) SentenciaFor -> . FOR PARIZQ VAR ID DOSPTS type IG expresion PUNTOCOMA ID MENIG expresion PUNTOCOMA ID MAS MAS PARDER LLAVEIZQ instrucciones LLAVEDER
    (125) listArray -> . accesId CORIZQ expresion CORDER

    VAR             shift and go to state 20
    CONST           shift and go to state 23
    ID              shift and go to state 21
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    CONSOLE         shift and go to state 34
    PARSEINT        shift and go to state 36
    PARSEFLOAT      shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    TYPEOF          shift and go to state 40
    OBJECT          shift and go to state 41
    INTERFACE       shift and go to state 42
    FUNCTION        shift and go to state 43
    NOT             shift and go to state 44
    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 35
    ENTERO          shift and go to state 45
    CADENA          shift and go to state 46
    DECIMAL         shift and go to state 47
    CARACTER        shift and go to state 48
    CORIZQ          shift and go to state 24
    IF              shift and go to state 50
    SWITCH          shift and go to state 51
    WHILE           shift and go to state 52
    FOR             shift and go to state 53

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2
    declaracionvar                 shift and go to state 3
    declaracionconst               shift and go to state 4
    arraydeclarationVar            shift and go to state 5
    arraydeclarationConst          shift and go to state 6
    asignacion                     shift and go to state 7
    AsigInter                      shift and go to state 8
    OptenInterface                 shift and go to state 9
    OperTernario                   shift and go to state 10
    SentCtrflujo                   shift and go to state 11
    SentTransf                     shift and go to state 12
    consolelog                     shift and go to state 13
    FuncDeb                        shift and go to state 14
    FuncEspe                       shift and go to state 15
    FunInterface                   shift and go to state 16
    FuncArray                      shift and go to state 17
    Funciones                      shift and go to state 18
    LLamaFunciones                 shift and go to state 19
    expresion                      shift and go to state 22
    accesId                        shift and go to state 26
    Sentenciaif                    shift and go to state 27
    SentenciaSwitch                shift and go to state 28
    SentenciaWhile                 shift and go to state 29
    SentenciaFor                   shift and go to state 30
    listArray                      shift and go to state 49

state 1

    (0) S' -> instrucciones .
    (1) instrucciones -> instrucciones . instruccion
    (3) instruccion -> . declaracionvar PUNTOCOMA
    (4) instruccion -> . declaracionconst PUNTOCOMA
    (5) instruccion -> . arraydeclarationVar PUNTOCOMA
    (6) instruccion -> . arraydeclarationConst PUNTOCOMA
    (7) instruccion -> . asignacion PUNTOCOMA
    (8) instruccion -> . AsigInter PUNTOCOMA
    (9) instruccion -> . OptenInterface
    (10) instruccion -> . OperTernario PUNTOCOMA
    (11) instruccion -> . SentCtrflujo
    (12) instruccion -> . SentTransf PUNTOCOMA
    (13) instruccion -> . consolelog PUNTOCOMA
    (14) instruccion -> . FuncDeb PUNTOCOMA
    (15) instruccion -> . FuncEspe PUNTOCOMA
    (16) instruccion -> . FunInterface PUNTOCOMA
    (17) instruccion -> . FuncArray PUNTOCOMA
    (18) instruccion -> . Funciones
    (19) instruccion -> . LLamaFunciones PUNTOCOMA
    (78) declaracionvar -> . VAR ID DOSPTS type IG expresion
    (79) declaracionvar -> . VAR ID DOSPTS type
    (80) declaracionvar -> . VAR ID IG expresion
    (81) declaracionvar -> . VAR ID DOSPTS ID IG LLAVEIZQ ListAtrib LLAVEDER
    (85) declaracionconst -> . CONST ID DOSPTS type IG expresion
    (86) declaracionconst -> . CONST ID DOSPTS type
    (87) declaracionconst -> . CONST ID IG expresion
    (127) arraydeclarationVar -> . VAR ID DOSPTS type CORIZQ CORDER IG expresion
    (128) arraydeclarationConst -> . CONST ID DOSPTS type CORIZQ CORDER IG expresion
    (74) asignacion -> . ID IG expresion
    (75) asignacion -> . ID MAS IG expresion
    (76) asignacion -> . ID MENOS IG expresion
    (77) asignacion -> . accesId CORIZQ expresion CORDER IG expresion
    (71) AsigInter -> . ID PT ID IG expresion
    (72) AsigInter -> . ID PT ID MAS IG expresion
    (73) AsigInter -> . ID PT ID MENOS IG expresion
    (34) OptenInterface -> . ID PT ID
    (70) OperTernario -> . expresion INTEROGACION expresion DOSPTS expresion
    (52) SentCtrflujo -> . Sentenciaif
    (53) SentCtrflujo -> . SentenciaSwitch
    (54) SentCtrflujo -> . SentenciaWhile
    (55) SentCtrflujo -> . SentenciaFor
    (66) SentTransf -> . BREAK
    (67) SentTransf -> . CONTINUE
    (68) SentTransf -> . RETURN
    (69) SentTransf -> . RETURN expresion
    (49) consolelog -> . CONSOLE PT LOG PARIZQ ListExpresion PARDER
    (41) FuncDeb -> . PARSEINT PARIZQ expresion PARDER
    (42) FuncDeb -> . PARSEFLOAT PARIZQ expresion PARDER
    (43) FuncDeb -> . FALSE PT TOSTRING PARIZQ PARDER
    (44) FuncDeb -> . TRUE PT TOSTRING PARIZQ PARDER
    (45) FuncDeb -> . ID PT TOSTRING PARIZQ PARDER
    (46) FuncDeb -> . ID PT TOLOWERCASE PARIZQ PARDER
    (47) FuncDeb -> . ID PT TOUPPERCASE PARIZQ PARDER
    (48) FuncDeb -> . TYPEOF expresion
    (39) FuncEspe -> . OBJECT PT KEYS PARIZQ expresion PARDER
    (40) FuncEspe -> . OBJECT PT VALUES PARIZQ expresion PARDER
    (35) FunInterface -> . INTERFACE ID LLAVEIZQ Listatributos LLAVEDER
    (20) FuncArray -> . ID PT JOIN PARIZQ PARDER
    (21) FuncArray -> . ID PT LENGTH
    (22) FuncArray -> . ID PT INDEXOF PARIZQ expresion PARDER
    (23) FuncArray -> . ID PT POP PARIZQ PARDER
    (24) FuncArray -> . ID PT PUSH PARIZQ expresion PARDER
    (27) Funciones -> . FUNCTION ID PARIZQ PARDER DOSPTS type LLAVEIZQ instrucciones LLAVEDER
    (28) Funciones -> . FUNCTION ID PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (29) Funciones -> . FUNCTION ID PARIZQ LisParat PARDER LLAVEIZQ instrucciones LLAVEDER
    (30) Funciones -> . FUNCTION ID PARIZQ LisParat PARDER DOSPTS type LLAVEIZQ instrucciones LLAVEDER
    (25) LLamaFunciones -> . ID PARIZQ PARDER
    (26) LLamaFunciones -> . ID PARIZQ ListExpresion PARDER
    (126) accesId -> . ID
    (94) expresion -> . expresion AND expresion
    (95) expresion -> . expresion OR expresion
    (96) expresion -> . NOT expresion
    (97) expresion -> . expresion MAY expresion
    (98) expresion -> . expresion MEN expresion
    (99) expresion -> . expresion MAYIG expresion
    (100) expresion -> . expresion MENIG expresion
    (101) expresion -> . expresion IGIG expresion
    (102) expresion -> . expresion DIF expresion
    (103) expresion -> . expresion MAS expresion
    (104) expresion -> . expresion MENOS expresion
    (105) expresion -> . expresion POR expresion
    (106) expresion -> . expresion DIVIDIDO expresion
    (107) expresion -> . expresion MOD expresion
    (108) expresion -> . MENOS expresion
    (109) expresion -> . PARIZQ expresion PARDER
    (110) expresion -> . ENTERO
    (111) expresion -> . CADENA
    (112) expresion -> . DECIMAL
    (113) expresion -> . TRUE
    (114) expresion -> . FALSE
    (115) expresion -> . CARACTER
    (116) expresion -> . FuncDeb
    (117) expresion -> . FuncEspe
    (118) expresion -> . OperTernario
    (119) expresion -> . OptenInterface
    (120) expresion -> . LLamaFunciones
    (121) expresion -> . FuncArray
    (122) expresion -> . listArray
    (123) expresion -> . ID
    (124) expresion -> . CORIZQ ListExpresion CORDER
    (63) Sentenciaif -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (64) Sentenciaif -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE LLAVEIZQ instrucciones LLAVEDER
    (65) Sentenciaif -> . IF PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER ELSE Sentenciaif
    (58) SentenciaSwitch -> . SWITCH PARIZQ expresion PARDER LLAVEIZQ listCase LLAVEDER
    (57) SentenciaWhile -> . WHILE PARIZQ expresion PARDER LLAVEIZQ instrucciones LLAVEDER
    (56) SentenciaFor -> . FOR PARIZQ VAR ID DOSPTS type IG expresion PUNTOCOMA ID MENIG expresion PUNTOCOMA ID MAS MAS PARDER LLAVEIZQ instrucciones LLAVEDER
    (125) listArray -> . accesId CORIZQ expresion CORDER

    VAR             shift and go to state 20
    CONST           shift and go to state 23
    ID              shift and go to state 21
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    CONSOLE         shift and go to state 34
    PARSEINT        shift and go to state 36
    PARSEFLOAT      shift and go to state 37
    FALSE           shift and go to state 38
    TRUE            shift and go to state 39
    TYPEOF          shift and go to state 40
    OBJECT          shift and go to state 41
    INTERFACE       shift and go to state 42
    FUNCTION        shift and go to state 43
    NOT             shift and go to state 44
    MENOS           shift and go to state 25
    PARIZQ          shift and go to state 35
    ENTERO          shift and go to state 45
    CADENA          shift and go to state 46
    DECIMAL         shift and go to state 47
    CARACTER        shift and go to state 48
    CORIZQ          shift and go to state 24
    IF              shift and go to state 50
    SWITCH          shift and go to state 51
    WHILE           shift and go to state 52
    FOR             shift and go to state 53

    instruccion                    shift and go to state 54
    declaracionvar                 shift and go to state 3
    declaracionconst               shift and go to state 4
    arraydeclarationVar            shift and go to state 5
    arraydeclarationConst          shift and go to state 6
    asignacion                     shift and go to state 7
    AsigInter                      shift and go to state 8
    OptenInterface                 shift and go to state 9
    OperTernario                   shift and go to state 10
    SentCtrflujo                   shift and go to state 11
    SentTransf                     shift and go to state 12
    consolelog                     shift and go to state 13
    FuncDeb                        shift and go to state 14
    FuncEspe                       shift and go to state 15
    FunInterface                   shift and go to state 16
    FuncArray                      shift and go to state 17
    Funciones                      shift and go to state 18
    LLamaFunciones                 shift and go to state 19
    expresion                      shift and go to state 22
    accesId                        shift and go to state 26
    Sentenciaif                    shift and go to state 27
    SentenciaSwitch                shift and go to state 28
    SentenciaWhile                 shift and go to state 29
    SentenciaFor                   shift and go to state 30
    listArray                      shift and go to state 49

state 2

    (2) instrucciones -> instruccion .

    VAR             reduce using rule 2 (instrucciones -> instruccion .)
    CONST           reduce using rule 2 (instrucciones -> instruccion .)
    ID              reduce using rule 2 (instrucciones -> instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 2 (instrucciones -> instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instruccion .)
    CONSOLE         reduce using rule 2 (instrucciones -> instruccion .)
    PARSEINT        reduce using rule 2 (instrucciones -> instruccion .)
    PARSEFLOAT      reduce using rule 2 (instrucciones -> instruccion .)
    FALSE           reduce using rule 2 (instrucciones -> instruccion .)
    TRUE            reduce using rule 2 (instrucciones -> instruccion .)
    TYPEOF          reduce using rule 2 (instrucciones -> instruccion .)
    OBJECT          reduce using rule 2 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 2 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instruccion .)
    NOT             reduce using rule 2 (instrucciones -> instruccion .)
    MENOS           reduce using rule 2 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 2 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 2 (instrucciones -> instruccion .)
    CADENA          reduce using rule 2 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 2 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 2 (instrucciones -> instruccion .)
    CORIZQ          reduce using rule 2 (instrucciones -> instruccion .)
    IF              reduce using rule 2 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 2 (instrucciones -> instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instruccion .)
    FOR             reduce using rule 2 (instrucciones -> instruccion .)
    $end            reduce using rule 2 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 2 (instrucciones -> instruccion .)
    CASE            reduce using rule 2 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 2 (instrucciones -> instruccion .)


state 3

    (3) instruccion -> declaracionvar . PUNTOCOMA

    PUNTOCOMA       shift and go to state 55


state 4

    (4) instruccion -> declaracionconst . PUNTOCOMA

    PUNTOCOMA       shift and go to state 56


state 5

    (5) instruccion -> arraydeclarationVar . PUNTOCOMA

    PUNTOCOMA       shift and go to state 57


state 6

    (6) instruccion -> arraydeclarationConst . PUNTOCOMA

    PUNTOCOMA       shift and go to state 58


state 7

    (7) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 59


state 8

    (8) instruccion -> AsigInter . PUNTOCOMA

    PUNTOCOMA       shift and go to state 60


state 9

    (9) instruccion -> OptenInterface .
    (119) expresion -> OptenInterface .
